File: components/nexus-cleanup/src/test/java/virtualthread/CleanupVirtualThreadTestSupport.java